--- a/VideoPlayervlc/VideoPlayervlc.Android/VideoPlayervlc.Android.csproj
+++ b/VideoPlayervlc/VideoPlayervlc.Android/VideoPlayervlc.Android.csproj
@@ -63,11 +63,14 @@
     <PackageReference Include="VideoLAN.LibVLC.Android">
       <Version>3.2.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Xamarin.Forms" Version="4.7.0.1080" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileDecryption.cs" />
+    <Compile Include="FileService.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="RemoveFile.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
